# AIchatbot-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  template.yaml
bruno/test/: Test chat.bru  Test title.bru  health.bru  hello.bru  register guest user.bru
scripts/: call_hello.py
setup/: check_tables.sh  create_tables.sh  download_dynamodb_local.sh  start_dynamodb_local.sh
src/app/: config.py  custom_logger.py  main.py  prompts.py  utils.py
src/app/db/: chat.py  db.py  dynamodb.py  user.py
src/app/middleware/: __init__.py  auth.py  logging.py
src/app/models/: chat.py  common.py  user.py
src/app/providers/: factory.py  openai.py  test.py
src/app/questions/: language.json  logic.json  math.json  programming.json
src/app/routes/: chat.py  health.py  quiz.py  title.py  user.py
src/app/util/: openai_question_generator.py  question_loader.py
src/chatbot_backend/: app.py  custom_logger.py  db.py  local.py  models.py  utils.py
src/chatbot_backend/db/: chat.py  db.py  user.py
src/chatbot_backend/middleware/: auth.py  logging.py
src/chatbot_backend/models/: __init__.py  chat.py  common.py  title.py  user.py
src/chatbot_backend/providers/: __init__.py  base.py  factory.py  openai.py  test.py
src/chatbot_backend/routes/: __init__.py  chat.py  health.py  title.py  user.py
tests/: conftest.py  test_app.py  test_chat_endpoint.py  test_generate_title_endpoint.py  test_provider_get_response.py
tests/fast/: test_app.py  test_auth_middleware.py  test_provider_get_response.py  test_test_prompts.py
tests/fixtures/: __init__.py  integration_fixtures.py
tests/integration/: __init__.py  conftest.py  test_user_integration.py
tests/slow/: test_chat.py  test_generate_title_endpoint.py  test_message.py  test_stream.py  test_title.py  test_user.py  test_vote.py
